Add guards to testing to check for anomalies